# dev-journal-2026

./: .gitignore  README.md  main.py  pyproject.toml
journal/: __main__.py  cli.py  console.py  db.py  models.py
tests/: test_cli.py  test_db.py
