[project]
name = "dev-journal-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
journal = "journal.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["journal/"]
exclude = [
  "/.*",
  "/tests"
]
